--- a/templates/english/experience.twig
+++ b/templates/english/experience.twig
@@ -20,7 +20,7 @@
 
     <p>Some of my main projects are:</p>
     
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th>Period</th>
