--- a/templates/french/experience.twig
+++ b/templates/french/experience.twig
@@ -20,7 +20,7 @@
 
     <p>Mes expériences principales :</p>
 
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th>Période</th>
