--- a/templates/russian/experience.twig
+++ b/templates/russian/experience.twig
@@ -20,7 +20,7 @@
 
     <p>Вот некоторые из них:</p>
 
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th>Период</th>
