--- a/templates/ukrainian/experience.twig
+++ b/templates/ukrainian/experience.twig
@@ -20,7 +20,7 @@
 
     <p>Ось деяки з них:</p>
 
-    <table class="table  ">
+    <table>
         <thead>
             <tr>
                 <th>Період</th>
