--- a/assets/styles/_aside.scss
+++ b/assets/styles/_aside.scss
@@ -14,6 +14,7 @@ aside {
         border: 1px solid $light-blue;
         border-radius: 3px;
         color: $dark-orange;
+        font-size: 18px;
         margin: 0;
         padding: 3px 20px;
     }
