--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -5,8 +5,9 @@ header {
         flex: auto;
     }
 
-    a, a:hover {
-        color: $light-orange;
+    h1 {
+        font-size: 36px;
+        line-height: 40px;
     }
 
     p {
@@ -17,12 +18,12 @@ header {
     }
 
     select {
-        border-color: $light-blue;
-        border-width: 3px;
+        background-color: white;
+        border: 3px solid $light-blue;
+        border-radius: 3px;
         color: $dark-blue;
+        font-size: 16px;
         font-weight: bold;
-        height: 33px;
-        line-height: 33px;
         width: 200px;
     }
 }
