--- a/assets/styles/_nav.scss
+++ b/assets/styles/_nav.scss
@@ -1,19 +1,17 @@
 nav {
     background-color: lighten($dark-brown, 30%);
     border: 1px solid $dark-brown;
-    border-radius: 4px;
+    border-radius: 6px;
     color: $dark-black;
     margin-bottom: 20px;
-    min-height: 40px;
     padding: 0 20px;
 
     ul {
         display: flex;
         list-style: none;
-        margin: 0;
 
         li {
-            a {
+            a, a:visited {
                 color: $dark-black;
                 display: block;
                 padding: 10px 15px 10px;
