--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,13 +1,12 @@
+@import "~scss-reset/src/scss/main.scss";
 @import '~@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '~@fortawesome/fontawesome-free/css/solid.css';
-
-@import "./customized-bootstrap.css";
 
 @import "variables";
 @import "layout";
 @import "header";
 @import "main";
 @import "nav";
-@import "aside";
 @import "article";
+@import "aside";
 @import "footer";
