--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -19,15 +19,15 @@
             {% include '_language_select.twig' %}
         </header>
         <main>
-            <div class="container-fluid">
+            <section>
                 <nav>
                     {% block nav %}{% endblock %}
                 </nav>
-                <article class="row-fluid">
+                <article>
                     {% block aside %}{% endblock %}
                     {% block content %}{% endblock %}
                 </article>
-            </div>
+            </section>
         </main>
         <footer>
             {% block footer %}{% endblock %}
