Fix progressive enhancement behavior on select

--- a/templates/_language_select.twig
+++ b/templates/_language_select.twig
@@ -1,5 +1,5 @@
 <label>
-<select data-controller="language" data-action="language#redirect" class="hidden">
+<select data-controller="language" data-action="language#redirect" class="hidden-without-js">
     <option value="{{ path(route, {'language': 'french'}) }}" {% if language == 'french' %}selected="selected"{% endif %}>
     	Version française
     </option>
