--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -25,5 +25,9 @@ header {
         font-size: 16px;
         font-weight: bold;
         width: 200px;
+
+        &.hidden-without-js {
+            display: none;
+        }
     }
 }
