Update JS dependencies

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,4 @@
-@import "~scss-reset/src/scss/main.scss";
+@import "~scss-reset/_reset.scss";
 @import '~@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '~@fortawesome/fontawesome-free/css/solid.css';
 
