Fix templates in French

--- a/templates/french/experience.twig
+++ b/templates/french/experience.twig
@@ -105,14 +105,14 @@
                 <td>juin 2011</td>
                 <td>Particulier</td>
                 <td>Monténégro</td>
-                <td>interprétation d'accompagnement pour un touristes lors d'excursions</td>
+                <td>interprétation d'accompagnement pour un touriste lors d'excursions</td>
                 <td>français, russe</td>
             </tr>
             <tr>
                 <td>mai 2008 à juillet 2011</td>
                 <td><a href="http://www.wwctrials.com/">Worldwide Clinical Trials</a></td>
                 <td>Ukraine</td>
-                <td>traduction technique de documentations médicale, pharmaceutique et administratives</td>
+                <td>traduction technique de documentations médicales, pharmaceutiques et administratives</td>
                 <td>ukrainien, russe, anglais</td>
             </tr>
             <tr>
@@ -132,8 +132,8 @@
     <p>Mes diplômes :</p>
 
     <ul>
-        <li>Master of Arts, option linguistique, interprétation et traduction en Anglais et Français. Diplôme obtenu en 2007 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
+        <li>Master of Arts, option linguistique, interprétation et traduction en anglais et français. Diplôme obtenu en 2007 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
 
-        <li>Bachelor of Arts, option linguistique, interprétation et traduction en Anglais. Diplôme obtenu en 2006 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
+        <li>Bachelor of Arts, option linguistique, interprétation et traduction en anglais. Diplôme obtenu en 2006 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
     </ul>
 {% endblock %}
