--- a/templates/french/home.twig
+++ b/templates/french/home.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>Bienvenue !</h3>
 
-    <p>Je m'appelle Svetlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Paris. Je propose des <a href="/french/service">services d'interprétation et de traduction</a> adaptés à vos attentes.</p>
+    <p>Je m'appelle Svitlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Montpellier. Je propose des <a href="/french/service">services d'interprétation et de traduction</a> adaptés à vos attentes.</p>
 
     <p>Mon expérience et mon professionnalisme me permettent de fournir un travail de qualité en répondant au mieux aux exigences de chacun de <a href="/french/experience">mes clients</a>.</p>
 
@@ -29,7 +29,7 @@
         <li>l'anglais, étudiée à l'école pendant 5 ans (niveau Master), utilisée professionnellement depuis 2005 (langue B).</li>
     </ul>
 
-    <p>Mon activité professionnelle m'a permis d'acquérir de l'expérience dans les domaines suivants : médecine, pharmacie, textile, télécommunications, internet, informatique, design, mode, luxe, transport, banques, finance, assurances, sciences, alimentation.</p>
+    <p>Mon activité professionnelle m'a permis d'acquérir de l'expérience dans les domaines suivants : médecine, pharmacie, textile, télécommunication, internet, informatique, design, mode, luxe, transport, banque, finance, assurance, science, alimentation, voyage, tourisme.</p>
 
     <p>N'hésitez pas à <a href="/french/quote">me contacter</a> en cas de besoin.</p>
 {% endblock %}
