--- a/templates/french/quote.twig
+++ b/templates/french/quote.twig
@@ -68,20 +68,20 @@
             <div>
                 <label for="form-languages">Langues à utiliser</label>
                 <span>
-                    <label><input id="form-languages" name="form[languages][]" type="checkbox" value="Français">Français</label>
-                    <label><input name="form[languages][]" type="checkbox" value="Anglais">Anglais</label>
-                    <label><input name="form[languages][]" type="checkbox" value="Russe">Russe</label>
-                    <label><input name="form[languages][]" type="checkbox" value="Ukrainien">Ukrainien</label>
+                    <label><input id="form-languages" name="form[languages][]" type="checkbox" value="français">français</label>
+                    <label><input name="form[languages][]" type="checkbox" value="anglais">anglais</label>
+                    <label><input name="form[languages][]" type="checkbox" value="russe">russe</label>
+                    <label><input name="form[languages][]" type="checkbox" value="ukrainien">ukrainien</label>
                 </span>
             </div>
             <div>
-                <label for="form-details">Détails de votre demande</label>
+                <label for="form-details">Détail de votre demande</label>
                 <textarea id="form-details" name="form[details]" rows="10"></textarea>
             </div>
             <button type="submit">Demander un devis</button>
         </form>
     {% else %}
-        <p>Merci d'avoir pris le temps de compléter le formulaire.</p>
+        <p>Merci d'avoir pris le temps de remplir le formulaire.</p>
 
         <p>Je vais étudier votre demande et je vous contacte le plus vite possible.</p>
     {% endif %}
