--- a/templates/french/service.twig
+++ b/templates/french/service.twig
@@ -28,7 +28,7 @@
 
     <h3>Interprétation de liaison</h3>
 
-    <p>Ce mode d'interprétation est utilisé lors d'un dialogue entre locuteurs parlant deux langues différentes. L'interprète traduit phrase après phrase sans prendre de notes en alternant entre les deux langues. Ce type d'interprétation est employé lors de rencontres en petit comité : discussion, négociations, entretiens ou visites de salons professionnels.</p>
+    <p>Ce mode d'interprétation est utilisé lors d'un dialogue entre locuteurs parlant deux langues différentes. L'interprète traduit phrase après phrase sans prendre de notes en alternant entre les deux langues. Ce type d'interprétation est employé lors de rencontres en petit comité : discussions, négociations, entretiens, visites de salons professionnels.</p>
 
     <h3>Interprétation d'accompagnement</h3>
 
