--- a/templates/french/layout.twig
+++ b/templates/french/layout.twig
@@ -1,11 +1,11 @@
 {% extends '/layout.twig' %}
 
 {% block page_title %}
-    Svetlana Merlet Tonkonog
+    Svitlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_title %}
-    Svetlana Merlet Tonkonog
+    Svitlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_subtitle %}
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block footer %}
-    <p>&copy; Svetlana Merlet Tonkonog</p>
+    <p>&copy; Svitlana Merlet Tonkonog</p>
 {% endblock %}
