Fix templates in English

--- a/templates/english/experience.twig
+++ b/templates/english/experience.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>My professional experience</h3>
 
-    <p>Throughout my experience in providing interpretation and translation services I have managed to gain confidence of many companies and individuals both in France and abroad.</p>
+    <p>Throughout my experience in providing interpretation and translation services I have managed to obtain the trust of many companies and individuals both in France and abroad.</p>
 
     <p>Some of my main projects are:</p>
     
@@ -35,14 +35,14 @@
                 <td>September 2012</td>
                 <td><a href="http://www.topmodel-muz.tv/">Top Model po-russki</a></td>
                 <td>France</td>
-                <td>simultaneous interpretation for the Reality show jury</td>
+                <td>simultaneous interpretation for the reality show jury</td>
                 <td>English, French, Russian</td>
             </tr>
             <tr>
                 <td>July 2012</td>
                 <td><a href="http://www.mtu.gov.ua/">Ministry of infrastructure of Ukraine</a></td>
                 <td>France</td>
-                <td>escort interpretation for a group of Ukrainians during their negotiations with French colleagues</td>
+                <td>escort interpretation for a group of Ukrainians during negotiations with French colleagues</td>
                 <td>Ukrainian, Russian, French</td>
             </tr>
             <tr>
@@ -70,7 +70,7 @@
                 <td>May 2012</td>
                 <td>Individual</td>
                 <td>France</td>
-                <td>liaison interpretation during a wedding ceremony at <a href="http://www.mairie2.paris.fr/">Town Hall of Paris (2nd quarter)</a></td>
+                <td>liaison interpretation during a wedding ceremony at <a href="http://www.mairie2.paris.fr/">Town Hall of Paris (2nd district)</a></td>
                 <td>French, Russian</td>
             </tr>
             <tr>
@@ -98,21 +98,21 @@
                 <td>June 2011</td>
                 <td>Marriage Agency</td>
                 <td>Ukraine</td>
-                <td>liaison interpretation for a Suisse client of the agency</td>
+                <td>liaison interpretation for a Swiss client of the agency</td>
                 <td>French, Russian, Ukrainian</td>
             </tr>
             <tr>
                 <td>June 2011</td>
                 <td>Individual</td>
                 <td>Montenegro</td>
-                <td>escort interpretation for a tourist during some excursions</td>
+                <td>escort interpretation for a tourist during excursions</td>
                 <td>French, Russian</td>
             </tr>
             <tr>
                 <td>from May 2008 to July 2011</td>
                 <td><a href="http://www.wwctrials.com/">Worldwide Clinical Trials</a></td>
                 <td>Ukraine</td>
-                <td>technical translation of medical, pharmaceutical and administrative documentation</td>
+                <td>technical translation of medical, pharmaceutical and administrative documentations</td>
                 <td>Ukrainian, Russian, English</td>
             </tr>
             <tr>
@@ -131,8 +131,8 @@
 
     <p>My diplomas:</p>
     <ul>
-        <li>Master of Arts in linguistics, translation and interpretation in English and French. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2007.</li>
+        <li>Master of Arts in linguistics, translation and interpretation in English and French. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a>. Diploma obtained in 2007.</li>
 
-        <li>Bachelor of Arts in linguistics in English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2006.</li>
+        <li>Bachelor of Arts in linguistics in English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a>. Diploma obtained in 2006.</li>
     </ul>
 {% endblock %}
