--- a/templates/english/home.twig
+++ b/templates/english/home.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>Welcome!</h3>
 
-    <p>My name is Svetlana Merlet (born Tonkonog), I am Ukrainian, presently based in Paris.</p>
+    <p>My name is Svitlana Merlet (born Tonkonog), I am Ukrainian, presently based in Montpellier.</p>
 
     <p>My experience and my professionalism allow me to deliver high quality and reliable <a href="/english/service">language services</a> which fit best your needs.</p>
 
