--- a/templates/english/service.twig
+++ b/templates/english/service.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>Simultaneous interpretation</h3>
 
-    <p>This mode of interpretation requires the use of special equipement (boothes, individual headsets, microphones, etc.). Due to such equipement the speaker does not have to make pauses during his/her speech. The interpretation happens in parallel which allows the audience to perceive more infromation without losing time. This type of interpretation is usually used during conferences, seminars, forums or presentations with a large number of participants.</p>
+    <p>This mode of interpretation requires the use of special equipement (boothes, individual headsets, microphones, etc.). With such equipement the speaker does not have to make pauses during his/her speech. The interpretation happens in parallel which allows the audience to perceive more information without losing time. This type of interpretation is usually used during conferences, seminars, forums or presentations with a large number of participants.</p>
 
     <h3>Whispered interpretation</h3>
 
@@ -24,11 +24,11 @@
 
     <h3>Consecutive interpretation</h3>
 
-    <p>Unlike the simultaneous interpretation, the consecutive interpretaiton is performed with pauses and does not require the use of any special equipement. This interpretation is considered as an interaction between the speaker and the interpreter. The interpreter takes notes while the speaker holds his/her speech. The semantic pauses at a regular intervals allow the interpreter to tranlsate what has been said. This type of interpretation suits for negotiations, meetings or round tables with a few number of participants.</p>
+    <p>Unlike the simultaneous interpretation, the consecutive interpretaiton is performed with pauses and does not require the use of any special equipement. This interpretation is considered as an interaction between the speaker and the interpreter. The interpreter takes notes while the speaker holds his/her speech. The semantic pauses at regular intervals allow the interpreter to tranlsate what has been said. This type of interpretation suits negotiations, meetings or round tables with a few number of participants.</p>
 
     <h3>Liaison interpretation</h3>
 
-    <p>This kind of interpretation presents a form of a dialogue between speakers who speak two different languages. The interpreter, without taking notes, translates phrase by phrase what is being said by alternating two languages. This type of interpretation is used during small group meetings: discussions, negotiations, interviews or professional exhibitions visits.</p>
+    <p>This kind of interpretation is used during a dialogue between speakers who speak two different languages. The interpreter, without taking notes, translates phrase by phrase what is being said by alternating two languages. This type of interpretation is used during small group meetings: discussions, negotiations, interviews or professional exhibition visits.</p>
 
     <h3>Escort interpretation</h3>
 
@@ -36,5 +36,5 @@
 
     <h3>Technical translation</h3>
 
-    <p>Opposite to the interpretation, the translation  is performed in a written form. The aim is to reproduce the text of a non-literary document by converting it from an original language into a target language. While translating a written document it is necessary to mind its grammatical, lexical and stylistical peculiairities. For exemple, this kind of translation can be applied to translating contracts, notices, manuals, web sites, and many others.</p>
+    <p>Opposite to the interpretation, the translation is performed in a written form. The aim is to reproduce the text of a non-literary document by converting it from an original language into a target language. While translating a written document it is necessary to mind its grammatical, lexical and stylistical peculiairities. For exemple, this kind of translation can be applied to translating contracts, notices, manuals, websites, and many others.</p>
 {% endblock %}
