--- a/templates/english/layout.twig
+++ b/templates/english/layout.twig
@@ -1,15 +1,15 @@
 {% extends '/layout.twig' %}
 
 {% block page_title %}
-    Svetlana Merlet Tonkonog
+    Svitlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_title %}
-    Svetlana Merlet Tonkonog
+    Svitlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_subtitle %}
-    Interpreter and translator of French, English, Russian and Ukrainian
+    Interpreter and translator in French, English, Russian and Ukrainian
 {% endblock %}
 
 {% block aside %}
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block footer %}
-    <p>&copy; Svetlana Merlet Tonkonog</p>
+    <p>&copy; Svitlana Merlet Tonkonog</p>
 {% endblock %}
