Fix templates in Russian

--- a/templates/russian/home.twig
+++ b/templates/russian/home.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>Добро пожаловать!</h3>
 
-    <p>Меня зовут Светлана Мерле-Тонконог, я украинка, на настоящий момент живущая в Париже. Я оказываю <a href="/russian/service">услуги устного и письменного перевода</a>, как на территории Франции, так и за её пределами.</p>
+    <p>Меня зовут Светлана Мерле-Тонконог, я украинка, на настоящий момент живущая в г. Монпелье. Я оказываю <a href="/russian/service">услуги устного и письменного перевода</a>, как на территории Франции, так и за её пределами.</p>
 
     <p>Приобретённый мною <a href="/russian/experience">опыт</a> и профессионализм обеспечивают высокое качество и надежность, выполняемых переводов. Благодаря индивидуальному подходу к каждому клиенту и учёту специфики каждого заказа, работа проходит на должном уровне и завершается в установленные сроки.</p>
 
