Fix templates in Ukrainian

--- a/templates/ukrainian/home.twig
+++ b/templates/ukrainian/home.twig
@@ -16,7 +16,7 @@
 {% block content %}
     <h3>Вітаю на моєму сайті!</h3>
 
-    <p>Мене звати Світлана Мерлє-Тонконог, я українка, живу в м. Париж. Я надаю <a href="/ukrainian/service">послуги усного та письмового перекладу</a> як на території Франції, так і за її межами.</p>
+    <p>Мене звати Світлана Мерлє-Тонконог, я українка, живу в м. Монпельє. Я надаю <a href="/ukrainian/service">послуги усного та письмового перекладу</a> як на території Франції, так і за її межами.</p>
 
     <p>Придбаний мною досвід і професіоналізм забезпечують високу якість і надійність перекладів, що виконуються. Завдяки індивідуальному підходу до кожного <a href="/ukrainian/experience">клієнта</a> і урахуванню специфіки кожного замовлення, робота проходить на належному рівні і завершується у встановлені часові межі.</p>
 
